colocando logo na pagina inicial

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -26,13 +26,8 @@
 </head>
 <!-- SET THE CONTROLLER AND GET ALL TODOS -->
 <body ng-controller="mainController">
-    <div class="container">
-
-        <!-- HEADER AND TODO COUNT -->
-        <div class="jumbotron text-center">
-            <h1>EPPICO</h1>
-            <span>onde o real e o virtual se conectam</span>
-        </div>
+    <div class="row">
+        <img src="images/logo_e_text" class="col-md-4 col-md-offset-4">
     </div>
 
 </body>
