--- a/public/views/index.html
+++ b/public/views/index.html
@@ -29,6 +29,18 @@
     <div class="row">
         <img src="images/logo_e_text" class="col-md-4 col-md-offset-4">
     </div>
+    <form class="col-md-4 col-md-offset-4">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
 </body>
 </html>
