--- a/public/views/index.html
+++ b/public/views/index.html
@@ -27,19 +27,33 @@
 <!-- SET THE CONTROLLER AND GET ALL TODOS -->
 <body ng-controller="mainController">
     <div class="row">
-        <img src="images/logo_e_text" class="col-md-4 col-md-offset-4">
+        <img src="images/logo_e_text" class="col-md-4 col-md-offset-4 img-responsive">
     </div>
-    <form class="col-md-4 col-md-offset-4">
+
+    <div ng-show="successMsg" class="alert alert-success col-md-4 col-md-offset-4">
+      <strong>{{successMsg}}</strong> 
+    </div>
+    <div ng-show="failMsg" class="alert alert-warning col-md-4 col-md-offset-4">
+      <strong>{{failMsg}}</strong>
+    </div>
+
+
+    <div ng-show="!showForm"  class="col-md-4 col-md-offset-4 text-center">
+        <p class="text-center"> Something very good is coming..</p>       
+        <button ng-click="showForm = !showForm" class="btn btn-primary center-block">Be curious!</button>
+    </div>
+    
+    <form ng-show="showForm" ng-submit="createUser()" class="col-md-4 col-md-offset-4">
+      <div class="form-group">        
+        <label for="inputName">Name</label>
+        <input ng-model="user.name" ng-required="true" type="text" class="form-control" id="inputName" placeholder="Your Name">
+      </div>
       <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <label for="inputEmail1">Email address</label>
+        <input ng-model="user.email" ng-required="true" type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
       </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Join us</button>
     </form>
 
 </body>
